prevent youtube video title to overlap

--- a/browser-extension/addModal.css
+++ b/browser-extension/addModal.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
 
-    z-index: 99;
+    z-index: 1001;
     display: none;
 
     overflow: auto;
